# SoundDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/xinyi/com/sounddemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/xinyi/com/sounddemo/: MainActivity.java
app/src/main/jni/: native-lib.cpp
app/src/main/jni/inc/: fmod.hpp
app/src/main/res/layout/: activity_main.xml
app/src/test/java/xinyi/com/sounddemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
